<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ImageView
        android:layout_width="120dp"
        android:layout_height="160dp"
        app:srcCompat="@drawable/notfound"
        android:id="@+id/ivMovieIcon2"
        tools:ignore="ContentDescription"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:contentDescription="@string/header"
        app:layout_constraintHorizontal_weight="1"
        app:srcCompat="@color/green"

        android:id="@+id/imageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        />
    <TextView
        android:text="@string/movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/original_title"
        android:textColor="@color/white"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display3"/>
    <TextView
        android:text="@string/release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/release_date"
        android:layout_weight="0.00"
        android:textSize="25sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/ivMovieIcon2"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintBottom_toTopOf="@+id/overview"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp" />
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:id="@+id/vote_count"
        android:numStars="5"
        android:isIndicator="true"

        app:layout_constraintTop_toBottomOf="@+id/release_date"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintLeft_toRightOf="@+id/ivMovieIcon2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/overview"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:text="@string/overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/overview"
        android:textAllCaps="false"
        android:textSize="26sp"
        android:textStyle="normal|italic"
        app:layout_constraintTop_toBottomOf="@+id/ivMovieIcon2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="8dp" />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/divider"
        app:layout_constraintRight_toRightOf="@+id/overview"
        android:layout_marginRight="16dp"

        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/overview"
        android:id="@+id/imageView2" />

    <TextView
        android:text="@string/trailer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/textView2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="serif"
        android:textStyle="normal|bold"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:layout_marginStart="5dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_off"
        android:id="@+id/favourite_btn"
        android:background="@null"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/pref_order_label_favourite"
        app:layout_constraintLeft_toRightOf="@+id/ivMovieIcon2"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.43"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/vote_count"
        app:layout_constraintBottom_toTopOf="@+id/overview"
        android:layout_marginBottom="8dp" />


</android.support.constraint.ConstraintLayout>